--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^3.0.0",
+        "bootstrap": "^5.2.0",
         "core-js": "^3.23.0",
+        "less-loader": "^11.0.0",
         "regenerator-runtime": "^0.13.9",
         "webpack-notifier": "^1.15.0"
     },
@@ -14,5 +17,10 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
