signin react + controller + js routing

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,9 @@ security:
             security: false
         main:
             lazy: true
+            logout:
+                path: security_logout
+                target: app_home
             json_login:
                 check_path: security_login
                 username_path: security.credentials.login
