--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,8 +20,8 @@ security:
                 target: app_home
             json_login:
                 check_path: security_login
-                username_path: security.credentials.login
-                password_path: security.credentials.password
+                username_path: security.username
+                password_path: security.password
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
