--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,6 +1,6 @@
 api_platform:
     defaults:
-        pagination_enabled: false
+        pagination_enabled: true
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
