--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "core-js": "^3.23.0",
         "less-loader": "^11.0.0",
         "regenerator-runtime": "^0.13.9",
+        "sass": "^1.54.8",
+        "sass-loader": "^13.0.0",
         "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
@@ -21,6 +23,7 @@
     "dependencies": {
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "socket.io-client": "^4.5.2"
     }
 }
