--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,7 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profil, roles: ROLE_USER }
         - { path: ^/organisator, roles: ROLE_USER }
+        - { path: ^/tchat, roles: ROLE_USER }
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
